--- a/NTierBlog.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierBlog.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using NTierBlog.Entity.Entities
+@using NTierBlog.Entity.DTOs.Users
+@using NTierBlog.Entity.DTOs.Articles
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
