--- a/NTierBlog.Web/Views/Home/Index.cshtml
+++ b/NTierBlog.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 @foreach (var item in Model)
 {
     <h1>@item.Title</h1> <br />
-    <h3>@item.Content</h3>
+    @* <h3>@item.Content</h3> *@
     <h3>@item.CreatedBy</h3>
     <br />
     <br />
