Toastr Notification projeye eklendi.

--- a/NTierBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NTierBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -378,6 +378,7 @@
 	<!-- Page JS -->
 	<script src="~/sneat/assets/js/dashboards-analytics.js"></script>
 	@await RenderSectionAsync("Scripts",false);
+	@await Component.InvokeAsync("NToastNotify")
 
 	<!-- Place this tag before closing body tag for github widget button. -->
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
