--- a/NTierBlog.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierBlog.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NTierBlog.Entity.Entities
 @using NTierBlog.Entity.DTOs.Users
 @using NTierBlog.Entity.DTOs.Articles
+@using NTierBlog.Entity.DTOs.Categories
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
